Add rough sketch of infant toggle to sorts and filters
This should only come up when there is at least one infant in
flight search params. If a user decides they want their infant(s)
to instead be in their own seats or vice versa, toggling this
spinner will (eventually) kick off a new search...all from the
comfort of flights mode.

It looks ugly, and it is ugly. BUT, beneath the grit and grime
is a foundation for a better child traveler experience.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -163,6 +163,14 @@
     <string name="cd_sort_by_distance">Press to sort by the closest hotels.</string>
     <!-- Denoting the lowest hotel/flight rate, e.g. "From $200" -->
     <string name="From_x_TEMPLATE">From %s</string>
+    <!--  Header for toggling infant seat option -->
+    <string name="header_child_traveler_seating">Child Traveler Seating</string>
+    <!-- Title explanation for toggling infant seat option -->
+    <string name="infant_seating_spinner_title">Children under 2 yrs</string>
+    <!-- Drop down item for denoting that infant travellers are in laps -->
+    <string name="infants_in_laps">Infants in laps</string>
+    <!-- Drop down item for denoting that infant travellers are in seats -->
+    <string name="infants_in_seats">Infants in seats</string>
 
     <!-- Tablet flight sort/filter controls -->
     <!-- Header for a flight filter based upon number of stops -->
