--- a/project/res/values-fr/strings.xml
+++ b/project/res/values-fr/strings.xml
@@ -31,7 +31,7 @@
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">Partez de %1$s</string>
     <!-- Choose flight dates -->
-    <string name="choose_flight_dates">Choisissez les dates de votre voyage</string>
+    <string name="choose_flight_dates">Choisir les dates de votre voyage</string>
     <!-- Hotels Tonight -->
     <string name="hotels_tonight">Hôtel ce soir</string>
     <!-- Missing flight info header string "Missing search information!" -->
@@ -39,7 +39,9 @@
     <!-- Missing flight info message "Please select a flight origin, and a valid date or date range."-->
     <string name="missing_flight_info_message">Veuillez sélectionner la provenance d\&apos;un vol et une date ou une fourchette de dates valide.</string>
     <!-- Clear dates -->
-    <string name="clear_dates">Effacez les dates</string>
+    <string name="clear_dates">Effacer les dates</string>
+    <!-- Search Now -->
+    <string name="search_now">Rechercher maintenant</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -184,12 +186,22 @@
     <string name="arrival_airports">Aéroports d\&apos;arrivée</string>
 
     <!-- Tablet hotel details -->
+    <!-- Rooms and rates price/night, i.e. $100/night -->
+    <string name="room_rate_per_night_template">&lt;font color="#145999"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/nuit</string>
+    <!-- Rooms and rates resort fees template. i.e. This hotel charges additional fees of $25 -->
+    <string name="tablet_room_rate_resort_fees_template">Cet hôtel applique des frais supplémentaires de &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <!-- Rooms and rates button to add selected room to trip -->
+    <string name="room_rate_button_add_to_trip">Ajouter au voyage</string>
+    <!-- Rooms and rates button to select a particular room and view details -->
+    <string name="room_rate_button_select_room">Choisir</string>
     <!-- Caption next to the star rating bar, like "3 stars" -->
     <string name="n_stars_TEMPLATE">%1$s étoiles</string>
     <!-- Caption next to the user review rating bar, like "140 reviews" -->
     <string name="n_reviews_TEMPLATE">%1$s avis</string>
     <!-- Caption for percent of guests who recommend this hotel, i.e. "90% recommend" -->
     <string name="recommend">de recommandations</string>
+    <!-- Caption for percent of guests who recommend this hotel including the percentage, i.e. "90% recommend" -->
+    <string name="n_recommend_TEMPLATE">%s%% de recommandations</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
     <plurals name="rooms_left">
         <item quantity="zero">chambres sur notre app</item>
@@ -198,6 +210,15 @@
         <item quantity="few">chambres sur notre app</item>
         <item quantity="many">chambres sur notre app</item>
         <item quantity="other">chambres sur notre app</item>
+    </plurals>
+    <!-- Caption for number of rooms left count, i.e. "4 rooms left" -->
+    <plurals name="n_rooms_left_TEMPLATE">
+        <item quantity="zero">%schambres sur notre app</item>
+        <item quantity="one">%schambre sur notre app</item>
+        <item quantity="two">%schambres sur notre app</item>
+        <item quantity="few">%schambres sur notre app</item>
+        <item quantity="many">%schambres sur notre app</item>
+        <item quantity="other">%schambres sur notre app</item>
     </plurals>
     <!-- Caption for user review count, i.e. 4.5 "out of 5" -->
     <string name="out_of_5">sur 5</string>
@@ -209,6 +230,8 @@
     <string name="Non_Refundable">Non remboursable</string>
     <!-- Title for the reviews section after we get the property name -->
     <string name="reviews_for_TEMPLATE">Avis pour %1$s</string>
+    <!-- Information for the review about who submitted it and when -->
+    <string name="submitted_by_on_date_TEMPLATE">%1$s le %2$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1916,6 +1939,8 @@
     <string name="user_review_loading_more_reviews">Plus d\&apos;avis…</string>
     <!-- Read more of the review -->
     <string name="user_review_read_more">En savoir plus</string>
+    <!-- Read more of the review -->
+    <string name="more">lire plus</string>
     <!--
          User review recommendation text (eg. 4 out of 5 guests recommend this hotel)
         1$ represents the number of guests that recommend this hotel
@@ -2001,6 +2026,8 @@
     <string name="renovation_notice">Avis de rénovation</string>
     <!-- This property is undergoing renovations -->
     <string name="property_undergoing_renovations">Des travaux de rénovation sont en cours dans cet établissement</string>
+    <!-- Rooms & rates more info link for renovation notice or resort fees -->
+    <string name="more_info">Plus d\&apos;informations</string>
 
     <!-- Gallery -->
     <!-- Label describing for property we are dispalying photos, e.g. "Photos of <Trump Towers>" -->
