--- a/project/res/values-zh/strings.xml
+++ b/project/res/values-zh/strings.xml
@@ -40,6 +40,8 @@
     <string name="missing_flight_info_message">请选择航班起飞地点，以及有效的日期范围</string>
     <!-- Clear dates -->
     <string name="clear_dates">清除日期</string>
+    <!-- Search Now -->
+    <string name="search_now">现在搜索</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -184,12 +186,22 @@
     <string name="arrival_airports">到达机场</string>
 
     <!-- Tablet hotel details -->
+    <!-- Rooms and rates price/night, i.e. $100/night -->
+    <string name="room_rate_per_night_template">&lt;font color="#145999"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/晚</string>
+    <!-- Rooms and rates resort fees template. i.e. This hotel charges additional fees of $25 -->
+    <string name="tablet_room_rate_resort_fees_template">该酒店另外收费 &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <!-- Rooms and rates button to add selected room to trip -->
+    <string name="room_rate_button_add_to_trip">加入旅行计划</string>
+    <!-- Rooms and rates button to select a particular room and view details -->
+    <string name="room_rate_button_select_room">选择房间</string>
     <!-- Caption next to the star rating bar, like "3 stars" -->
     <string name="n_stars_TEMPLATE">%1$s 星</string>
     <!-- Caption next to the user review rating bar, like "140 reviews" -->
     <string name="n_reviews_TEMPLATE">%1$s 条点评</string>
     <!-- Caption for percent of guests who recommend this hotel, i.e. "90% recommend" -->
     <string name="recommend">推荐</string>
+    <!-- Caption for percent of guests who recommend this hotel including the percentage, i.e. "90% recommend" -->
+    <string name="n_recommend_TEMPLATE">%s%% 用户推荐</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
     <plurals name="rooms_left">
         <item quantity="zero">间空房</item>
@@ -198,6 +210,15 @@
         <item quantity="few">间空房</item>
         <item quantity="many">间空房</item>
         <item quantity="other">间空房</item>
+    </plurals>
+    <!-- Caption for number of rooms left count, i.e. "4 rooms left" -->
+    <plurals name="n_rooms_left_TEMPLATE">
+        <item quantity="zero">%s间空房</item>
+        <item quantity="one">%s间空房</item>
+        <item quantity="two">%s间空房</item>
+        <item quantity="few">%s间空房</item>
+        <item quantity="many">%s间空房</item>
+        <item quantity="other">%s间空房</item>
     </plurals>
     <!-- Caption for user review count, i.e. 4.5 "out of 5" -->
     <string name="out_of_5">满分 5 分</string>
@@ -209,6 +230,8 @@
     <string name="Non_Refundable">不可退款</string>
     <!-- Title for the reviews section after we get the property name -->
     <string name="reviews_for_TEMPLATE">%1$s的点评</string>
+    <!-- Information for the review about who submitted it and when -->
+    <string name="submitted_by_on_date_TEMPLATE">%1$s，%2$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1916,6 +1939,8 @@
     <string name="user_review_loading_more_reviews">正在加载更多点评…</string>
     <!-- Read more of the review -->
     <string name="user_review_read_more">阅读更多内容</string>
+    <!-- Read more of the review -->
+    <string name="more">更多</string>
     <!--
          User review recommendation text (eg. 4 out of 5 guests recommend this hotel)
         1$ represents the number of guests that recommend this hotel
@@ -2001,6 +2026,8 @@
     <string name="renovation_notice">装修通知</string>
     <!-- This property is undergoing renovations -->
     <string name="property_undergoing_renovations">此酒店正在进行装修。</string>
+    <!-- Rooms & rates more info link for renovation notice or resort fees -->
+    <string name="more_info">更多信息</string>
 
     <!-- Gallery -->
     <!-- Label describing for property we are dispalying photos, e.g. "Photos of <Trump Towers>" -->
