--- a/project/res/values-es-rMX/strings.xml
+++ b/project/res/values-es-rMX/strings.xml
@@ -40,6 +40,8 @@
     <string name="missing_flight_info_message">Selecciona un origen para tu vuelo, y una fecha válida o un rango de fechas.</string>
     <!-- Clear dates -->
     <string name="clear_dates">Eliminar las fechas</string>
+    <!-- Search Now -->
+    <string name="search_now">Buscar ahora</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -184,12 +186,22 @@
     <string name="arrival_airports">Aeropuertos de llegada</string>
 
     <!-- Tablet hotel details -->
+    <!-- Rooms and rates price/night, i.e. $100/night -->
+    <string name="room_rate_per_night_template">&lt;font color="#145999"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/noche</string>
+    <!-- Rooms and rates resort fees template. i.e. This hotel charges additional fees of $25 -->
+    <string name="tablet_room_rate_resort_fees_template">Este hotel cobra un cargo adicional de &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <!-- Rooms and rates button to add selected room to trip -->
+    <string name="room_rate_button_add_to_trip">Agregar al viaje</string>
+    <!-- Rooms and rates button to select a particular room and view details -->
+    <string name="room_rate_button_select_room">Seleccionar habitación</string>
     <!-- Caption next to the star rating bar, like "3 stars" -->
     <string name="n_stars_TEMPLATE">%1$s estrellas</string>
     <!-- Caption next to the user review rating bar, like "140 reviews" -->
     <string name="n_reviews_TEMPLATE">%1$s reseñas</string>
     <!-- Caption for percent of guests who recommend this hotel, i.e. "90% recommend" -->
     <string name="recommend">lo recomiendan</string>
+    <!-- Caption for percent of guests who recommend this hotel including the percentage, i.e. "90% recommend" -->
+    <string name="n_recommend_TEMPLATE">%s%% lo recomiendan</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
     <plurals name="rooms_left">
         <item quantity="zero">habitaciones disponibles</item>
@@ -198,6 +210,15 @@
         <item quantity="few">habitaciones disponibles</item>
         <item quantity="many">habitaciones disponibles</item>
         <item quantity="other">habitaciones disponibles</item>
+    </plurals>
+    <!-- Caption for number of rooms left count, i.e. "4 rooms left" -->
+    <plurals name="n_rooms_left_TEMPLATE">
+        <item quantity="zero">%s habitaciones disponibles</item>
+        <item quantity="one">%s habitación disponible</item>
+        <item quantity="two">%s habitaciones disponibles</item>
+        <item quantity="few">%s habitaciones disponibles</item>
+        <item quantity="many">%s habitaciones disponibles</item>
+        <item quantity="other">%s habitaciones disponibles</item>
     </plurals>
     <!-- Caption for user review count, i.e. 4.5 "out of 5" -->
     <string name="out_of_5">de 5</string>
@@ -209,6 +230,8 @@
     <string name="Non_Refundable">No reembolsable</string>
     <!-- Title for the reviews section after we get the property name -->
     <string name="reviews_for_TEMPLATE">Reseñas para %1$s</string>
+    <!-- Information for the review about who submitted it and when -->
+    <string name="submitted_by_on_date_TEMPLATE">%1$s en %2$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1916,6 +1939,8 @@
     <string name="user_review_loading_more_reviews">Cargando más comentarios…</string>
     <!-- Read more of the review -->
     <string name="user_review_read_more">Leer más</string>
+    <!-- Read more of the review -->
+    <string name="more">más información</string>
     <!--
          User review recommendation text (eg. 4 out of 5 guests recommend this hotel)
         1$ represents the number of guests that recommend this hotel
@@ -2001,6 +2026,8 @@
     <string name="renovation_notice">Aviso de remodelación</string>
     <!-- This property is undergoing renovations -->
     <string name="property_undergoing_renovations">Este establecimiento está siendo remodelado</string>
+    <!-- Rooms & rates more info link for renovation notice or resort fees -->
+    <string name="more_info">Más información</string>
 
     <!-- Gallery -->
     <!-- Label describing for property we are dispalying photos, e.g. "Photos of <Trump Towers>" -->
