--- a/project/res/values-ja/strings.xml
+++ b/project/res/values-ja/strings.xml
@@ -40,6 +40,8 @@
     <string name="missing_flight_info_message">フライト出発地、有効な日付または期間を選択してください。</string>
     <!-- Clear dates -->
     <string name="clear_dates">日付をクリア</string>
+    <!-- Search Now -->
+    <string name="search_now">今すぐ検索</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -184,12 +186,22 @@
     <string name="arrival_airports">到着空港</string>
 
     <!-- Tablet hotel details -->
+    <!-- Rooms and rates price/night, i.e. $100/night -->
+    <string name="room_rate_per_night_template">&lt;font color="#145999"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/ 泊</string>
+    <!-- Rooms and rates resort fees template. i.e. This hotel charges additional fees of $25 -->
+    <string name="tablet_room_rate_resort_fees_template">ホテルから追加料金として &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt; が請求されます。</string>
+    <!-- Rooms and rates button to add selected room to trip -->
+    <string name="room_rate_button_add_to_trip">旅行に追加</string>
+    <!-- Rooms and rates button to select a particular room and view details -->
+    <string name="room_rate_button_select_room">部屋を選択</string>
     <!-- Caption next to the star rating bar, like "3 stars" -->
     <string name="n_stars_TEMPLATE">%1$s つ星</string>
     <!-- Caption next to the user review rating bar, like "140 reviews" -->
     <string name="n_reviews_TEMPLATE">%1$s 件のレビュー</string>
     <!-- Caption for percent of guests who recommend this hotel, i.e. "90% recommend" -->
     <string name="recommend">のゲストが推奨</string>
+    <!-- Caption for percent of guests who recommend this hotel including the percentage, i.e. "90% recommend" -->
+    <string name="n_recommend_TEMPLATE">%s%% のゲストが推奨</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
     <plurals name="rooms_left">
         <item quantity="zero">室残り</item>
@@ -198,6 +210,15 @@
         <item quantity="few">室残り</item>
         <item quantity="many">室残り</item>
         <item quantity="other">室残り</item>
+    </plurals>
+    <!-- Caption for number of rooms left count, i.e. "4 rooms left" -->
+    <plurals name="n_rooms_left_TEMPLATE">
+        <item quantity="zero">%s室残り</item>
+        <item quantity="one">%s室残り</item>
+        <item quantity="two">%s室残り</item>
+        <item quantity="few">%s室残り</item>
+        <item quantity="many">%s室残り</item>
+        <item quantity="other">%s室残り</item>
     </plurals>
     <!-- Caption for user review count, i.e. 4.5 "out of 5" -->
     <string name="out_of_5">(5 段階中)</string>
@@ -209,6 +230,8 @@
     <string name="Non_Refundable">返金不可</string>
     <!-- Title for the reviews section after we get the property name -->
     <string name="reviews_for_TEMPLATE">%1$sのレビュー</string>
+    <!-- Information for the review about who submitted it and when -->
+    <string name="submitted_by_on_date_TEMPLATE">%2$s, %1$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1916,6 +1939,8 @@
     <string name="user_review_loading_more_reviews">さらにレビューを読み込んでいます…</string>
     <!-- Read more of the review -->
     <string name="user_review_read_more">もっと読む</string>
+    <!-- Read more of the review -->
+    <string name="more">もっと読む</string>
     <!--
          User review recommendation text (eg. 4 out of 5 guests recommend this hotel)
         1$ represents the number of guests that recommend this hotel
@@ -2001,6 +2026,8 @@
     <string name="renovation_notice">改装工事のお知らせ</string>
     <!-- This property is undergoing renovations -->
     <string name="property_undergoing_renovations">この施設では、改装工事が行われています</string>
+    <!-- Rooms & rates more info link for renovation notice or resort fees -->
+    <string name="more_info">詳細情報</string>
 
     <!-- Gallery -->
     <!-- Label describing for property we are dispalying photos, e.g. "Photos of <Trump Towers>" -->
