--- a/project/res/values-ko/strings.xml
+++ b/project/res/values-ko/strings.xml
@@ -33,13 +33,15 @@
     <!-- Choose flight dates -->
     <string name="choose_flight_dates">항공편 날짜 선택</string>
     <!-- Hotels Tonight -->
-    <string name="hotels_tonight">오늘 밤 가능한 호텔</string>
+    <string name="hotels_tonight">오늘 밤 추천 호텔</string>
     <!-- Missing flight info header string "Missing search information!" -->
     <string name="missing_flight_info_header">검색 정보가 없습니다!</string>
     <!-- Missing flight info message "Please select a flight origin, and a valid date or date range."-->
     <string name="missing_flight_info_message">항공편 출발지 및 유효한 날짜 또는 날짜 범위를 선택해 주세요.</string>
     <!-- Clear dates -->
     <string name="clear_dates">날짜 지우기</string>
+    <!-- Search Now -->
+    <string name="search_now">지금 검색</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -184,12 +186,22 @@
     <string name="arrival_airports">도착 공항</string>
 
     <!-- Tablet hotel details -->
+    <!-- Rooms and rates price/night, i.e. $100/night -->
+    <string name="room_rate_per_night_template">&lt;font color="#145999"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/1박</string>
+    <!-- Rooms and rates resort fees template. i.e. This hotel charges additional fees of $25 -->
+    <string name="tablet_room_rate_resort_fees_template">이 호텔에서는 &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;의 추가 요금을 부과합니다.</string>
+    <!-- Rooms and rates button to add selected room to trip -->
+    <string name="room_rate_button_add_to_trip">여행에 추가</string>
+    <!-- Rooms and rates button to select a particular room and view details -->
+    <string name="room_rate_button_select_room">객실 선택</string>
     <!-- Caption next to the star rating bar, like "3 stars" -->
     <string name="n_stars_TEMPLATE">%1$s성급</string>
     <!-- Caption next to the user review rating bar, like "140 reviews" -->
     <string name="n_reviews_TEMPLATE">%1$s개 이용 후기</string>
     <!-- Caption for percent of guests who recommend this hotel, i.e. "90% recommend" -->
     <string name="recommend">고객이 추천</string>
+    <!-- Caption for percent of guests who recommend this hotel including the percentage, i.e. "90% recommend" -->
+    <string name="n_recommend_TEMPLATE">%s%% 고객이 추천</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
     <plurals name="rooms_left">
         <item quantity="zero">개 객실 남음</item>
@@ -198,6 +210,15 @@
         <item quantity="few">개 객실 남음</item>
         <item quantity="many">개 객실 남음</item>
         <item quantity="other">개 객실 남음</item>
+    </plurals>
+    <!-- Caption for number of rooms left count, i.e. "4 rooms left" -->
+    <plurals name="n_rooms_left_TEMPLATE">
+        <item quantity="zero">%s개 객실 남음</item>
+        <item quantity="one">%s개 객실 남음</item>
+        <item quantity="two">%s개 객실 남음</item>
+        <item quantity="few">%s개 객실 남음</item>
+        <item quantity="many">%s개 객실 남음</item>
+        <item quantity="other">%s개 객실 남음</item>
     </plurals>
     <!-- Caption for user review count, i.e. 4.5 "out of 5" -->
     <string name="out_of_5">(5점 만점)</string>
@@ -209,6 +230,8 @@
     <string name="Non_Refundable">환불 불가</string>
     <!-- Title for the reviews section after we get the property name -->
     <string name="reviews_for_TEMPLATE">%1$s에 대한 이용 후기</string>
+    <!-- Information for the review about who submitted it and when -->
+    <string name="submitted_by_on_date_TEMPLATE">%1$s, %2$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1916,6 +1939,8 @@
     <string name="user_review_loading_more_reviews">더 많은 이용 후기 로드 중…</string>
     <!-- Read more of the review -->
     <string name="user_review_read_more">더 보기</string>
+    <!-- Read more of the review -->
+    <string name="more">더 보기</string>
     <!--
          User review recommendation text (eg. 4 out of 5 guests recommend this hotel)
         1$ represents the number of guests that recommend this hotel
@@ -2001,6 +2026,8 @@
     <string name="renovation_notice">새단장 공사 알림</string>
     <!-- This property is undergoing renovations -->
     <string name="property_undergoing_renovations">이 숙박 시설은 현재 새단장 공사 중입니다.</string>
+    <!-- Rooms & rates more info link for renovation notice or resort fees -->
+    <string name="more_info">자세히</string>
 
     <!-- Gallery -->
     <!-- Label describing for property we are dispalying photos, e.g. "Photos of <Trump Towers>" -->
@@ -2315,7 +2342,7 @@
     <!-- Display for distances.  1$ is a distance, 2$ is a unit, e.g. "5 miles away" -->
     <string name="distance_template">%1$s%2$s 거리</string>
     <!-- Display for distances - but abbreviated, for space.  1$ is a distance, 2$ is a unit, e.g. "5 mi" -->
-    <string name="distance_template_short">%1$s %2$s</string>
+    <string name="distance_template_short">%1$s%2$s</string>
 
     <!-- Menu strings -->
     <!-- Label for "settings" menu item. -->
