--- a/project/res/values-nl/strings.xml
+++ b/project/res/values-nl/strings.xml
@@ -40,6 +40,8 @@
     <string name="missing_flight_info_message">Kies een vertrekplaats en een geldige datum of periode.</string>
     <!-- Clear dates -->
     <string name="clear_dates">Datums wissen</string>
+    <!-- Search Now -->
+    <string name="search_now">Nu zoeken</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -184,12 +186,22 @@
     <string name="arrival_airports">Luchthavens van aankomst</string>
 
     <!-- Tablet hotel details -->
+    <!-- Rooms and rates price/night, i.e. $100/night -->
+    <string name="room_rate_per_night_template">&lt;font color="#145999"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/nacht</string>
+    <!-- Rooms and rates resort fees template. i.e. This hotel charges additional fees of $25 -->
+    <string name="tablet_room_rate_resort_fees_template">Dit hotel berekent &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt; aan extra kosten</string>
+    <!-- Rooms and rates button to add selected room to trip -->
+    <string name="room_rate_button_add_to_trip">Aan reis toevoegen</string>
+    <!-- Rooms and rates button to select a particular room and view details -->
+    <string name="room_rate_button_select_room">Kamer selecteren</string>
     <!-- Caption next to the star rating bar, like "3 stars" -->
     <string name="n_stars_TEMPLATE">%1$s sterren</string>
     <!-- Caption next to the user review rating bar, like "140 reviews" -->
     <string name="n_reviews_TEMPLATE">%1$s beoordelingen</string>
     <!-- Caption for percent of guests who recommend this hotel, i.e. "90% recommend" -->
     <string name="recommend">raden dit aan</string>
+    <!-- Caption for percent of guests who recommend this hotel including the percentage, i.e. "90% recommend" -->
+    <string name="n_recommend_TEMPLATE">%s%% raden dit aan</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
     <plurals name="rooms_left">
         <item quantity="zero">kamers over</item>
@@ -198,6 +210,15 @@
         <item quantity="few">kamers over</item>
         <item quantity="many">kamers over</item>
         <item quantity="other">kamers over</item>
+    </plurals>
+    <!-- Caption for number of rooms left count, i.e. "4 rooms left" -->
+    <plurals name="n_rooms_left_TEMPLATE">
+        <item quantity="zero">%s kamers over</item>
+        <item quantity="one">%s kamer over</item>
+        <item quantity="two">%s kamers over</item>
+        <item quantity="few">%s kamers over</item>
+        <item quantity="many">%s kamers over</item>
+        <item quantity="other">%skamers over</item>
     </plurals>
     <!-- Caption for user review count, i.e. 4.5 "out of 5" -->
     <string name="out_of_5">op 5</string>
@@ -209,6 +230,8 @@
     <string name="Non_Refundable">Geen restitutie</string>
     <!-- Title for the reviews section after we get the property name -->
     <string name="reviews_for_TEMPLATE">Beoordelingen voor %1$s</string>
+    <!-- Information for the review about who submitted it and when -->
+    <string name="submitted_by_on_date_TEMPLATE">%1$s op %2$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1916,6 +1939,8 @@
     <string name="user_review_loading_more_reviews">Bezig met laden van meer beoordelingen…</string>
     <!-- Read more of the review -->
     <string name="user_review_read_more">Lees verder</string>
+    <!-- Read more of the review -->
+    <string name="more">meer</string>
     <!--
          User review recommendation text (eg. 4 out of 5 guests recommend this hotel)
         1$ represents the number of guests that recommend this hotel
@@ -2001,6 +2026,8 @@
     <string name="renovation_notice">Renovatiewerken</string>
     <!-- This property is undergoing renovations -->
     <string name="property_undergoing_renovations">Deze accommodatie voert renovatiewerken uit</string>
+    <!-- Rooms & rates more info link for renovation notice or resort fees -->
+    <string name="more_info">Meer info</string>
 
     <!-- Gallery -->
     <!-- Label describing for property we are dispalying photos, e.g. "Photos of <Trump Towers>" -->
