--- a/project/res/values-zh-rHK/strings.xml
+++ b/project/res/values-zh-rHK/strings.xml
@@ -40,6 +40,8 @@
     <string name="missing_flight_info_message">請選擇航班出發地，以及有效的日期或期間。</string>
     <!-- Clear dates -->
     <string name="clear_dates">清除日期</string>
+    <!-- Search Now -->
+    <string name="search_now">立即搜尋</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -184,12 +186,22 @@
     <string name="arrival_airports">抵達機場</string>
 
     <!-- Tablet hotel details -->
+    <!-- Rooms and rates price/night, i.e. $100/night -->
+    <string name="room_rate_per_night_template">&lt;font color="#145999"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/每晚</string>
+    <!-- Rooms and rates resort fees template. i.e. This hotel charges additional fees of $25 -->
+    <string name="tablet_room_rate_resort_fees_template">這間酒店收取附加費 &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <!-- Rooms and rates button to add selected room to trip -->
+    <string name="room_rate_button_add_to_trip">加入行程</string>
+    <!-- Rooms and rates button to select a particular room and view details -->
+    <string name="room_rate_button_select_room">選擇客房</string>
     <!-- Caption next to the star rating bar, like "3 stars" -->
     <string name="n_stars_TEMPLATE">%1$s 星</string>
     <!-- Caption next to the user review rating bar, like "140 reviews" -->
     <string name="n_reviews_TEMPLATE">%1$s 則評價</string>
     <!-- Caption for percent of guests who recommend this hotel, i.e. "90% recommend" -->
     <string name="recommend">旅客推薦</string>
+    <!-- Caption for percent of guests who recommend this hotel including the percentage, i.e. "90% recommend" -->
+    <string name="n_recommend_TEMPLATE">%s%% 旅客推薦</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
     <plurals name="rooms_left">
         <item quantity="zero">間剩餘客房</item>
@@ -198,6 +210,15 @@
         <item quantity="few">間剩餘客房</item>
         <item quantity="many">間剩餘客房</item>
         <item quantity="other">間剩餘客房</item>
+    </plurals>
+    <!-- Caption for number of rooms left count, i.e. "4 rooms left" -->
+    <plurals name="n_rooms_left_TEMPLATE">
+        <item quantity="zero">%s 間剩餘客房</item>
+        <item quantity="one">%s 間剩餘客房</item>
+        <item quantity="two">%s 間剩餘客房</item>
+        <item quantity="few">%s 間剩餘客房</item>
+        <item quantity="many">%s 間剩餘客房</item>
+        <item quantity="other">%s 間剩餘客房</item>
     </plurals>
     <!-- Caption for user review count, i.e. 4.5 "out of 5" -->
     <string name="out_of_5">總分 5 分</string>
@@ -209,6 +230,8 @@
     <string name="Non_Refundable">不設退款</string>
     <!-- Title for the reviews section after we get the property name -->
     <string name="reviews_for_TEMPLATE">%1$s的評論</string>
+    <!-- Information for the review about who submitted it and when -->
+    <string name="submitted_by_on_date_TEMPLATE">%1$s 於 %2$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1916,6 +1939,8 @@
     <string name="user_review_loading_more_reviews">正載入更多評語…</string>
     <!-- Read more of the review -->
     <string name="user_review_read_more">閱讀更多</string>
+    <!-- Read more of the review -->
+    <string name="more">更多</string>
     <!--
          User review recommendation text (eg. 4 out of 5 guests recommend this hotel)
         1$ represents the number of guests that recommend this hotel
@@ -2001,6 +2026,8 @@
     <string name="renovation_notice">裝修通知</string>
     <!-- This property is undergoing renovations -->
     <string name="property_undergoing_renovations">此酒店正進行裝修工程</string>
+    <!-- Rooms & rates more info link for renovation notice or resort fees -->
+    <string name="more_info">詳情</string>
 
     <!-- Gallery -->
     <!-- Label describing for property we are dispalying photos, e.g. "Photos of <Trump Towers>" -->
