2780 child traveler search experience on tablet
So, child travelers are kind of complicated, and it gets even more complicated
when you're dealing with infants (children under two). If you're flying with
an infant you have two options: (1) have the infant sit in your lap or (2) purchase
a seat for the infant.

We don't want to overload the guest picker on search, especially because it is
shared between hotels and flights, and hotels flow doesn't care about infant
in lap vs. infant in seat. Moreover, all infants must abide by the same rule (e.g.
you can't book one infant in lap and one infant in seat for the same booking).

Given all the above information, we default flight searches with infants to be "in lap".
We think this is a safe assumption, and we afford the user the opportunity to change
this in the flight filters, where, we kick them off a new search if they would like
to change their infant seating preference. This commit pops a dialog confirming the
changed preference and kicks off a new search with the correct parameters.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -171,6 +171,12 @@
     <string name="infants_in_laps">Infants in laps</string>
     <!-- Drop down item for denoting that infant travellers are in seats -->
     <string name="infants_in_seats">Infants in seats</string>
+    <!-- Title for infant seating preference -->
+    <string name="infant_seating_preference">Infant Seating Preference</string>
+    <!-- A message telling the user that the app needs to do a new search because infant seating preference has changed to in seat-->
+    <string name="infants_in_seats_prompt">All infants under 2 (at time of travel) will have their own seats. We will now search again for the correct number of tickets.</string>
+    <!-- A message telling the user that the app needs to do a new search because infant seating preference has changed to in lap-->
+    <string name="infants_in_laps_prompt">All infants under 2 (at time of travel) must sit in the lap of adult. We will now search again for the correct number of tickets.</string>
 
     <!-- Tablet flight sort/filter controls -->
     <!-- Header for a flight filter based upon number of stops -->
